Update build files

--- a/Process/System1/Makefiles/GNUmakefile/GNUmakefile
+++ b/Process/System1/Makefiles/GNUmakefile/GNUmakefile
@@ -63,15 +63,15 @@ BOOST_ROOT ?= $(BOOST)
 
 # ------------
 
-all: $(_builddir)System1 $(_builddir)HelloWorld
+all: ../../Bin/System1 ../../Bin/HelloWorld
 
-$(_builddir)System1: $(_builddir)System1_main.o
+../../Bin/System1: $(_builddir)System1_main.o
 	$(CXX) -o $@ $(LDFLAGS) $(_builddir)System1_main.o -L$(BOOST_ROOT)/stage/lib -pthread
 
 $(_builddir)System1_main.o: ../../Source/main.cpp
 	$(CXX) -c -o $@ $(CPPFLAGS) $(CXXFLAGS) -MD -MP -pthread -I$(BOOST_ROOT) ../../Source/main.cpp
 
-$(_builddir)HelloWorld: $(_builddir)HelloWorld_main.o
+../../Bin/HelloWorld: $(_builddir)HelloWorld_main.o
 	$(CXX) -o $@ $(LDFLAGS) $(_builddir)HelloWorld_main.o -pthread
 
 $(_builddir)HelloWorld_main.o: ../../Source/HelloWorld/main.cpp
@@ -80,8 +80,8 @@ $(_builddir)HelloWorld_main.o: ../../Source/HelloWorld/main.cpp
 clean:
 	rm -f $(_builddir)*.o
 	rm -f $(_builddir)*.d
-	rm -f $(_builddir)System1
-	rm -f $(_builddir)HelloWorld
+	rm -f ../../Bin/System1
+	rm -f ../../Bin/HelloWorld
 
 .PHONY: all clean
 
